--- a/linky.html
+++ b/linky.html
@@ -90,7 +90,7 @@
         <dd> The consumption datas in <code>JSON</code> format.</dd>
         <dd> Example for daily datas (fetched every half hours).</dd>
 
-<pre><CODE>payload {
+<dd><pre><code>payload {
   {
     debut : "JJ/MM/AAAA",
     fin : "JJ/MM/AAAA"
@@ -114,7 +114,7 @@
       {"valeur": 9.999,"ordre": 47}
     ]
   }
-}</CODE></pre>
+}</code></pre></dd>
 
     <dd>More examples <a href= "https://github.com/PhilBri/Node-Linky/blob/master/docs/linky_files_examples.js">here</a>.</dd>
     </dl>
